plugins/opa/examples-v2/dns-hostname-too-long/test-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-test
  namespace: default
  annotations:
    certmanager.k8s.io/issuer: dummy-value-to-test-this-policy
spec:
  rules:
  # This long hostname should fail the policy.
  - host: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
